[FIX] NFC_CARDS Module
